2004-06-16  Ilja Booij  <ilja@ic-s.nl>

	* dbmail.conf: number of children and maxconnects for LMTP upped
	to 20 and 10000.

2004-06-14  Ilja Booij  <ilja@ic-s.nl>

	* pgsql/dbpgsql.c (db_query): now checks and resets the connection
	by itself. No longer uses db_check_connection.
	(db_check_connection): removed function. Was no longer in use.

2004-06-13 Aaron Stone <aaron@serendipity.cx>

	* main.c (main): initialize the variable 'header' to NULL
	so that it can be conditionally freed without a segfault.
	Thanks to Blake Mitchell for identifying this bug.

2004-06-11  Ilja Booij  <ilja@ic-s.nl>

	* config.c (config_free): fixed memory leaks by really freeing all
	memory in the list.

	* All database files: added is_header flag in messageblks
	table, and index to this flag. The flag is not used in any
	code yet, but is present because we'll need it later on.
	
2004-06-09  Ilja Booij  <ilja@ic-s.nl>

	* dbmsgbuf.c (db_dump_range): changed query to cut down
	on the number of queries. Patch by Paul J Stevens
	(db_init_msgfetch): changed query to cut down
	on the number of queries. Patch by Paul J Stevens

2004-06-03 Aaron Stone <aaron@serendipity.cx>

	* dbmail.h: added macro PRINTF_ARGS as a wrapper around
	__attribute__(format(printf...))), which is GCC specific.
	* debug.h, pop3.c, lmtp.c: now using PRINTF_ARGS.

2004-06-03  Ilja Booij  <ilja@ic-s.nl>

	* auth/authsql.c (auth_user_exists): escape user name using
	db_escape_string() before putting it in a query.
	(auth_md5_validate): escape username using db_escape_string()
	before putting it in a query.

	* all_files: changed from __FUNCTION__ preprocessor macro to
	__func__, which is used in C99.

	* serverchild.c (PerformChildTask): changed call to setlinebuf()
	to setvbuf() to make it work on non-BSD and non-GNU systems. The
	new call is functionally completely equivalent, it just looks
	different.

	* lmtp.c (lmtp_error): only add __attribute__ if __GNUC__
	is defined.
